<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/white"
    >

    <TextView
        android:id="@+id/tv_credit_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/tv_credit_quantity"
        android:layout_below="@+id/tv_credit_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/tv_credit_product_price"
        android:layout_below="@+id/tv_credit_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="14sp"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>